--- a/train_wrn_ebm_nb.ipynb
+++ b/train_wrn_ebm_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,15 @@
     "t.backends.cudnn.benchmark = True\n",
     "t.backends.cudnn.enabled = True\n",
     "seed = 1\n",
+    "\n",
+    "# images RGB 32x32\n",
     "im_sz = 32\n",
     "n_ch = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# setup Wide_ResNet\n",
+    "# from The Google Research Authors, file wideresnet.py\n",
     "class F(nn.Module):\n",
     "    def __init__(self, depth=28, width=2, norm=None, dropout_rate=0.0, n_classes=10):\n",
     "        super(F, self).__init__()\n",
@@ -82,11 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Energies if y=none\n",
+    "# EBM energy calculated as logsumexp of logits\n",
     "class CCF(F):\n",
     "    def __init__(self, depth=28, width=2, norm=None, dropout_rate=0.0, n_classes=10):\n",
     "        super(CCF, self).__init__(depth, width, norm=norm, dropout_rate=dropout_rate, n_classes=n_classes)\n",
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,10 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup SGLD model and data/replay buffer\n",
+    "# Images generated are added to a buffer and sampled with a probability (1-\\rho) for efficiency\n",
     "def get_model_and_buffer(args, device, sample_q):\n",
     "    model_cls = F if args.uncond else CCF\n",
     "    f = model_cls(args.depth, args.width, args.norm, dropout_rate=args.dropout_rate, n_classes=args.n_classes)\n",
@@ -160,10 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load in chosen dataset from svhn, cifar10, cifar100\n",
     "def get_data(args):\n",
     "    if args.dataset == \"svhn\":\n",
     "        transform_train = tr.Compose(\n",
@@ -240,11 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# class for SGLD generation of fake images\n",
     "def get_sample_q(args, device):\n",
+    "    # setup initial data/buffers\n",
     "    def sample_p_0(replay_buffer, bs, y=None):\n",
     "        if len(replay_buffer) == 0:\n",
     "            return init_random(args, bs), []\n",
@@ -260,6 +269,7 @@
     "        samples = choose_random * random_samples + (1 - choose_random) * buffer_samples\n",
     "        return samples.to(device), inds\n",
     "\n",
+    "    # actual SGLD\n",
     "    def sample_q(f, replay_buffer, y=None, n_steps=args.n_steps):\n",
     "        \"\"\"this func takes in replay_buffer now so we have the option to sample from\n",
     "        scratch (i.e. replay_buffer==[]).  See test_wrn_ebm.py for example.\n",
@@ -281,8 +291,10 @@
     "        \n",
     "        # set self.training = True\n",
     "        f.train()\n",
+    "        \n",
     "        # Returns a new Tensor, detached from the current graph\n",
     "        final_samples = x_k.detach()\n",
+    "        \n",
     "        # update replay buffer\n",
     "        if len(replay_buffer) > 0:\n",
     "            replay_buffer[buffer_inds] = final_samples.cpu()\n",
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,11 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# main function for training\n",
+    "# Uses args from class below\n",
     "def main(args):\n",
     "    utils.makedirs(args.save_dir)\n",
     "    with open(f'{args.save_dir}/params.txt', 'w') as f:\n",
@@ -412,7 +425,7 @@
     "\n",
     "                # surrogate for the difference of expected value of \\partial Energy/\\partial x\n",
     "                # and \\partial Energy/\\partial x\n",
-    "                # Need to maximize this, so preceeded by minus\n",
+    "                # Need to maximize this, so preceded by minus\n",
     "                l_p_x = -(fp - fq)\n",
     "                if cur_iter % args.print_every == 0:\n",
     "                    print('P(x) | {}:{:>d} f(x_p_d)={:>14.9f} f(x_q)={:>14.9f} d={:>14.9f}'.format(epoch, i, fp, fq,\n",
@@ -503,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -591,139 +604,74 @@
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
-      "| Wide-Resnet 28x10\n",
-      "loading model from ./savedir/best_valid_ckpt.pt\n"
+      "| Wide-Resnet 28x10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "0it [00:00, ?it/s]"
+      "1it [00:02,  2.91s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n",
-      "P(x) | 0:0 f(x_p_d)=   1.067865491 f(x_q)=   1.066436410 d=   0.001429081\n",
-      "P(y|x) 0:0 loss=   0.336998075, acc=   0.890625000\n"
+      "P(x) | 0:0 f(x_p_d)=   2.309050322 f(x_q)=   2.309582710 d=  -0.000532389\n",
+      "P(y|x) 0:0 loss=   2.309996367, acc=   0.109375000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "1it [00:02,  2.96s/it]"
+      "101it [04:41,  3.26s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n"
+      "P(x) | 0:100 f(x_p_d)=  -4.882236004 f(x_q)=   8.936382294 d= -13.818618774\n",
+      "P(y|x) 0:100 loss=   2.517178059, acc=   0.203125000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "2it [00:05,  2.81s/it]"
+      "201it [09:20,  3.26s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n"
+      "P(x) | 0:200 f(x_p_d)=  30.862178802 f(x_q)=  29.844377518 d=   1.017801285\n",
+      "P(y|x) 0:200 loss=   2.281885386, acc=   0.109375000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "3it [00:08,  2.78s/it]"
+      "301it [13:59,  3.26s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n"
+      "P(x) | 0:300 f(x_p_d)=  13.872137070 f(x_q)=  13.736315727 d=   0.135821342\n",
+      "P(y|x) 0:300 loss=   2.162550688, acc=   0.218750000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "4it [00:11,  2.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "5it [00:13,  2.75s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n",
-      "x_q_shape torch.Size([64, 3, 32, 32])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "6it [00:16,  2.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_p_d_shape torch.Size([64, 3, 32, 32])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-6779329c5827>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# run\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-20-8f036a57799e>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"x_p_d_shape\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_p_d\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0mx_p_d\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_p_d\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m             \u001b[0mx_lab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_lab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdload_train_labeled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0mx_lab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_lab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_lab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_lab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "371it [17:12,  2.76s/it]"
      ]
     }
    ],
@@ -733,8 +681,8 @@
     "# Added best_valid_ckpt load\n",
     "inline_parms = {\"lr\": .0001, \"dataset\": \"cifar10\", \"optimizer\": \"adam\", \"save_dir\": './exp2', \\\n",
     "                \"p_x_weight\": 1.0, \"p_y_given_x_weight\": 1.0, \"p_x_y_weight\": 0.0, \\\n",
-    "                \"sigma\": .03, \"width\": 10, \"depth\": 28, \"plot_uncond\": True, \"warmup_iters\": 1000, \\\n",
-    "                \"load_path\": './savedir/best_valid_ckpt.pt'} # added loading from checkpoint\n",
+    "                \"sigma\": .03, \"width\": 10, \"depth\": 28, \"plot_uncond\": True, \"warmup_iters\": 1000}#, \\\n",
+    "                #\"load_path\": './savedir/best_valid_ckpt.pt'} # added loading from checkpoint\n",
     "\n",
     "# instantiate\n",
     "args = train_args(inline_parms)\n",
@@ -758,6 +706,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
