--- a/train_wrn_ebm_nb.ipynb
+++ b/train_wrn_ebm_nb.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "import utils\n",
+    "import utils # from The Google Research Authors\n",
     "import torch as t, torch.nn as nn, torch.nn.functional as tnnF, torch.distributions as tdist\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "import torchvision as tv, torchvision.transforms as tr\n",
@@ -16,13 +16,13 @@
     "import argparse\n",
     "#import ipdb\n",
     "import numpy as np\n",
-    "import wideresnet\n",
+    "import wideresnet # from The Google Research Authors\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# setup Wide_ResNet\n",
-    "# from The Google Research Authors, file wideresnet.py\n",
+    "# Uses The Google Research Authors, file wideresnet.py\n",
     "class F(nn.Module):\n",
     "    def __init__(self, depth=28, width=2, norm=None, dropout_rate=0.0, n_classes=10):\n",
     "        super(F, self).__init__()\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# various\n",
+    "# various utilities\n",
     "def cycle(loader):\n",
     "    while True:\n",
     "        for data in loader:\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class for SGLD generation of fake images\n",
+    "# Routine for SGLD generation of fake images\n",
     "def get_sample_q(args, device):\n",
     "    # setup initial data/buffers\n",
     "    def sample_p_0(replay_buffer, bs, y=None):\n",
@@ -304,10 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculate loss and accuracy for periodic printout\n",
     "def eval_classification(f, dload, device):\n",
     "    corrects, losses = [], []\n",
     "    for x_p_d, y_p_d in dload:\n",
@@ -324,10 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save checkpoint data\n",
     "def checkpoint(f, buffer, tag, args, device):\n",
     "    f.cpu()\n",
     "    ckpt_dict = {\n",
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +379,10 @@
     "\n",
     "    best_valid_acc = 0.0\n",
     "    cur_iter = 0\n",
+    "    \n",
+    "    # loop over epochs\n",
     "    for epoch in range(args.n_epochs):\n",
+    "        # decaying learning rate?\n",
     "        if epoch in args.decay_epochs:\n",
     "            for param_group in optim.param_groups:\n",
     "                new_lr = param_group['lr'] * args.decay_rate\n",
@@ -387,6 +392,7 @@
     "        # loop over data in batches\n",
     "        # x_p_d sample from dataset\n",
     "        for i, (x_p_d, _) in tqdm(enumerate(dload_train)):\n",
+    "            # scale up lr to full over warmup time\n",
     "            if cur_iter <= args.warmup_iters:\n",
     "                lr = args.lr * cur_iter / float(args.warmup_iters)\n",
     "                for param_group in optim.param_groups:\n",
@@ -516,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,88 +599,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arg warmup_iters 1000 lr 0.0001\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "| Wide-Resnet 28x10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1it [00:02,  2.91s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P(x) | 0:0 f(x_p_d)=   2.309050322 f(x_q)=   2.309582710 d=  -0.000532389\n",
-      "P(y|x) 0:0 loss=   2.309996367, acc=   0.109375000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "101it [04:41,  3.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P(x) | 0:100 f(x_p_d)=  -4.882236004 f(x_q)=   8.936382294 d= -13.818618774\n",
-      "P(y|x) 0:100 loss=   2.517178059, acc=   0.203125000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "201it [09:20,  3.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P(x) | 0:200 f(x_p_d)=  30.862178802 f(x_q)=  29.844377518 d=   1.017801285\n",
-      "P(y|x) 0:200 loss=   2.281885386, acc=   0.109375000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "301it [13:59,  3.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P(x) | 0:300 f(x_p_d)=  13.872137070 f(x_q)=  13.736315727 d=   0.135821342\n",
-      "P(y|x) 0:300 loss=   2.162550688, acc=   0.218750000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "371it [17:12,  2.76s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup change from defaults\n",
     "# For paper defaults\n",
