Added jupyter version of eval.

--- a/train_wrn_ebm_nb.ipynb
+++ b/train_wrn_ebm_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,118 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg warmup_iters 1000 lr 0.0001\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "| Wide-Resnet 28x10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:02,  2.93s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:0 f(x_p_d)=   2.309050322 f(x_q)=   2.309582710 d=  -0.000532389\n",
+      "P(y|x) 0:0 loss=   2.309996367, acc=   0.109375000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "101it [04:45,  3.31s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:100 f(x_p_d)=  -4.901064873 f(x_q)=   8.916442871 d= -13.817507744\n",
+      "P(y|x) 0:100 loss=   2.517230272, acc=   0.203125000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "201it [09:28,  3.31s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:200 f(x_p_d)=  30.842798233 f(x_q)=  29.825008392 d=   1.017789841\n",
+      "P(y|x) 0:200 loss=   2.281870365, acc=   0.109375000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "301it [14:10,  3.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:300 f(x_p_d)=  13.865034103 f(x_q)=  13.731508255 d=   0.133525848\n",
+      "P(y|x) 0:300 loss=   2.162305593, acc=   0.218750000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "401it [18:53,  3.31s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:400 f(x_p_d)=  11.734998703 f(x_q)=  11.359630585 d=   0.375368118\n",
+      "P(y|x) 0:400 loss=   2.213852882, acc=   0.171875000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "501it [23:36,  3.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x) | 0:500 f(x_p_d)=   8.335248947 f(x_q)=   7.770503998 d=   0.564744949\n",
+      "P(y|x) 0:500 loss=   2.084853172, acc=   0.250000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "517it [24:59,  6.09s/it]"
+     ]
+    }
+   ],
    "source": [
     "# setup change from defaults\n",
     "# For paper defaults\n",
