Added step to convert notebook to a script

--- a/train.ipynb
+++ b/train.ipynb
@@ -336,7 +336,7 @@
     "        self.width = 10 # wide-resnet widen_factor\n",
     "        self.depth = 28  # wide-resnet depth\n",
     "        self.sigma = .03 # image transformation\n",
-    "        self.data_root = \"../data\" \n",
+    "        self.data_root = \"../dataset\" \n",
     "        # optimization\n",
     "        self.lr = 1e-4\n",
     "        self.clf_only = False #action=\"store_true\", help=\"If set, then only train the classifier\")\n",
@@ -373,7 +373,7 @@
     "# setup change from defaults\n",
     "# For paper defaults\n",
     "# Added best_valid_ckpt load\n",
-    "inline_parms = {\"lr\": .0001, \"save_dir\": './all0'} #, \"load_path\": './all1/last_ckpt.pt'} \n",
+    "inline_parms = {\"lr\": .0001} #, \"load_path\": './all1/last_ckpt.pt'} \n",
     "\n",
     "# instantiate\n",
     "args = train_args(inline_parms)\n",
