--- a/train.ipynb
+++ b/train.ipynb
@@ -25,7 +25,6 @@
     "#from tqdm import tqdm\n",
     "t.backends.cudnn.benchmark = True\n",
     "t.backends.cudnn.enabled = True\n",
-    "seed = 1\n",
     "\n",
     "# images RGB 32x32\n",
     "im_sz = 32"
@@ -114,7 +113,7 @@
     "    full_train = dataset_fn(True, transform_train)\n",
     "    all_inds = list(range(len(full_train)))\n",
     "    # set seed\n",
-    "    np.random.seed(1234)\n",
+    "    np.random.seed(args.seed)\n",
     "    # shuffle\n",
     "    np.random.shuffle(all_inds)\n",
     "    # seperate out validation set\n",
@@ -204,14 +203,12 @@
     "    if not os.path.exists(args.save_dir):\n",
     "        os.makedirs(args.save_dir)\n",
     "\n",
-    "    with open(f'{args.save_dir}/params.txt', 'w') as f:\n",
-    "        json.dump(args.__dict__, f)\n",
     "    if args.print_to_log:\n",
     "        sys.stdout = open(f'{args.save_dir}/log.txt', 'w')\n",
     "\n",
-    "    t.manual_seed(seed)\n",
+    "    t.manual_seed(args.seed)\n",
     "    if t.cuda.is_available():\n",
-    "        t.cuda.manual_seed_all(seed)\n",
+    "        t.cuda.manual_seed_all(args.seed)\n",
     "\n",
     "    # datasets\n",
     "    dload_train, dload_train_labeled, dload_valid, dload_test = get_data(args)\n",
@@ -322,6 +319,25 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "import yaml\n",
+    "params = yaml.safe_load(open(\"params.yaml\"))\n",
+    "\n",
+    "def get_parameter(name, default):\n",
+    "    to_search = params\n",
+    "    for part in name.split(\".\"):\n",
+    "        result = to_search.get(part)\n",
+    "        if result == None:\n",
+    "            return default\n",
+    "        to_search = result\n",
+    "    return to_search"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# Setup parameters\n",
     "# defaults for paper\n",
     "# --lr .0001 --dataset cifar10 --optimizer adam --p_x_weight 1.0 --p_y_given_x_weight 1.0 \n",
@@ -336,13 +352,14 @@
     "        self.width = 10 # wide-resnet widen_factor\n",
     "        self.depth = 28  # wide-resnet depth\n",
     "        self.sigma = .03 # image transformation\n",
-    "        self.data_root = \"../dataset\" \n",
+    "        self.data_root = \"./dataset\" \n",
+    "        self.seed = get_parameter(\"seed\", 1)\n",
     "        # optimization\n",
     "        self.lr = 1e-4\n",
     "        self.clf_only = False #action=\"store_true\", help=\"If set, then only train the classifier\")\n",
     "        self.labels_per_class = -1# help=\"number of labeled examples per class, if zero then use all labels\")\n",
     "        self.batch_size = 64\n",
-    "        self.n_epochs = 1\n",
+    "        self.n_epochs = get_parameter(\"epochs\", 100)\n",
     "        # regularization\n",
     "        self.dropout_rate = 0.0\n",
     "        self.sigma = 3e-2 # help=\"stddev of gaussian noise to add to input, .03 works but .1 is more stable\")\n",
