Added code to make unique directories for each experiment

--- a/train.ipynb
+++ b/train.ipynb
@@ -250,6 +250,7 @@
     "    cur_iter = 0\n",
     "    \n",
     "    # loop over epochs\n",
+    "    scores = {}\n",
     "    for epoch in range(epoch_start, epoch_start + args.n_epochs):\n",
     "        # loop over data in batches\n",
     "        # x_p_d sample from dataset\n",
@@ -297,20 +298,27 @@
     "            with t.no_grad():\n",
     "                # train set\n",
     "                correct, loss = eval_classification(f, dload_train, device)\n",
+    "                scores[\"train\"] = {\"acc:\": float(correct), \"loss\": float(loss)}\n",
     "                print(\"Epoch {}: Train Loss {}, Train Acc {}\".format(epoch, loss, correct))\n",
     "\n",
     "                # test set\n",
     "                correct, loss = eval_classification(f, dload_test, device)\n",
+    "                scores[\"test\"] = {\"acc:\": float(correct), \"loss\": float(loss)}\n",
     "                print(\"Epoch {}: Test Loss {}, Test Acc {}\".format(epoch, loss, correct))\n",
     "\n",
     "                # validation set\n",
     "                correct, loss = eval_classification(f, dload_valid, device)\n",
+    "                scores[\"validation\"] = {\"acc:\": float(correct), \"loss\": float(loss)}\n",
     "                print(\"Epoch {}: Valid Loss {}, Valid Acc {}\".format(epoch, loss, correct))\n",
     "\n",
     "            f.train()\n",
-    "            \n",
+    "\n",
     "        # do \"last\" checkpoint\n",
-    "        checkpoint(f, optim, epoch, \"last_ckpt.pt\", args, device)"
+    "        checkpoint(f, optim, epoch, \"last_ckpt.pt\", args, device)\n",
+    "\n",
+    "    # write stats\n",
+    "    with open('scores.json', 'w') as outfile:\n",
+    "        json.dump(scores, outfile)"
    ],
    "outputs": [],
    "metadata": {}
@@ -367,7 +375,7 @@
     "        # network\n",
     "        self.norm = None # choices=[None, \"norm\", \"batch\", \"instance\", \"layer\", \"act\"], help=\"norm to add to weights, none works fine\")\n",
     "        # logging + evaluation\n",
-    "        self.save_dir = './experiment'\n",
+    "        self.save_dir = './experiment/{}'.format(yaml.safe_load(open(\"params.yaml.sha\")).get(\"hash\"))\n",
     "        self.ckpt_every = 10 # help=\"Epochs between checkpoint save\")\n",
     "        self.eval_every = 1 # help=\"Epochs between evaluation\")\n",
     "        self.print_every = 100 # help=\"Iterations between print\")\n",
