Removed hashing in favor of dvc temporary experiment directories

--- a/train.ipynb
+++ b/train.ipynb
@@ -375,7 +375,7 @@
     "        # network\n",
     "        self.norm = None # choices=[None, \"norm\", \"batch\", \"instance\", \"layer\", \"act\"], help=\"norm to add to weights, none works fine\")\n",
     "        # logging + evaluation\n",
-    "        self.save_dir = './experiment/{}'.format(yaml.safe_load(open(\"params.yaml.sha\")).get(\"hash\"))\n",
+    "        self.save_dir = './experiment'\n",
     "        self.ckpt_every = 10 # help=\"Epochs between checkpoint save\")\n",
     "        self.eval_every = 1 # help=\"Epochs between evaluation\")\n",
     "        self.print_every = 100 # help=\"Iterations between print\")\n",
